fix script verbosity for troubleshooting, and add helper for multi-service

--- a/pack/templates.cfg
+++ b/pack/templates.cfg
@@ -1,5 +1,11 @@
 define host{
    name           elasticsearch-query
+   use            generic-elasticsearch-query
+   register 0
+}
+
+define host{
+   name           generic-elasticsearch-query
    use            generic-host
    register       0
 
